--- a/fpga/de1/SDRAMTest.qsf
+++ b/fpga/de1/SDRAMTest.qsf
@@ -41,7 +41,7 @@ set_global_assignment -name DEVICE EP2C20F484C7
 set_global_assignment -name TOP_LEVEL_ENTITY DE1_Toplevel
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION "12.0 SP1"
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "00:29:53  MAY 10, 2013"
-set_global_assignment -name LAST_QUARTUS_VERSION "12.0 SP1"
+set_global_assignment -name LAST_QUARTUS_VERSION "13.0 SP1"
 set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
 set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
 set_global_assignment -name DEVICE_FILTER_PACKAGE FBGA
@@ -551,3 +551,4 @@ set_global_assignment -name QIP_FILE PLL.qip
 set_global_assignment -name VERILOG_FILE DE1_Toplevel.v
 set_global_assignment -name VHDL_FILE ../../RTL/SDRAMTest.vhd
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
+set_global_assignment -name SLD_FILE /home/amr/FPGA/Projects/SDRAMTest/fpga/de1/stp1_auto_stripped.stp
