--- a/fpga/de1/SDRAMTest.qsf
+++ b/fpga/de1/SDRAMTest.qsf
@@ -549,4 +549,6 @@ set_global_assignment -name VERILOG_FILE DE1_Toplevel.v
 set_global_assignment -name VHDL_FILE ../../RTL/SDRAMTest.vhd
 set_global_assignment -name SLD_FILE /home/amr/FPGA/Projects/SDRAMTest/fpga/de1/stp1_auto_stripped.stp
 set_global_assignment -name SDC_FILE SDRAMTest.sdc
+set_global_assignment -name PHYSICAL_SYNTHESIS_COMBO_LOGIC ON
+set_global_assignment -name PHYSICAL_SYNTHESIS_REGISTER_RETIMING ON
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
